--- a/login_qa_cn.html
+++ b/login_qa_cn.html
@@ -117,7 +117,7 @@
 							</div>
                         </h3>
 						<h3>
-							若帐号的个人资料填写完整，请来信或来电告知「使用者名称」、「手机号码」...等资讯，我们可以协助您寻回帐号。
+							若帐号的个人资料填写完整，请来信告知「使用者名称」、「手机号码」...等资讯，我们可以协助您寻回帐号。
                               <br>
                           客服邮箱：service@racetrackinc.comom					</h3>
                     </div>
