--- a/login_qa_tw.html
+++ b/login_qa_tw.html
@@ -117,10 +117,8 @@
 							</div>
                         </h3>
 						<h3>
-							若帳號的個人資料填寫完整，請來信或來電告知「使用者名稱」、「手機號碼」...等資訊，我們可以協助您尋回帳號。
+							若帳號的個人資料填寫完整，請來信告知「使用者名稱」、「手機號碼」...等資訊，我們可以協助您尋回帳號。
                               <br>
-                          客服專線：(02)2523-0651  (週一至週五 9:30am 至 6:30pm)
-                          <br>
                           客服信箱：service@racetrackinc.com					</h3>
                     </div>
 										<div data-role="collapsible">
@@ -153,7 +151,6 @@
 			<div data-theme="b" data-role="footer" data-position="fixed">
 				<h3>
 					<div style="white-space:normal;">
-					服務專線：02-2523-0651<br> 
 					服務信箱：service@racetrackinc.com</div>
 				</h3>
 			</div>
