隱藏紅利相關說明

--- a/app_qa_en.html
+++ b/app_qa_en.html
@@ -162,9 +162,10 @@
 							</div>
 						</h3>
 						<h3>
-							Please contact the teacher to initiate the use of WoBao for school-parent communication.
+							Please contact the teacher to initiate the use of wowbwow for school-parent communication.
 						</h3>
                     </div>
+					<!--
 					   <div data-role="collapsible">
                         <h3>
 							<div style="white-space:normal;">
@@ -212,7 +213,7 @@
 							Afterward, try downloading again to see if it works.			
 						 </h3>
                     </div>
-					
+					-->
                 </div>
             </div>
 			
